<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_pesanan_berhasil"
            android:textSize="24sp"
            android:textColor="@color/primary_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/primary_color"
            android:layout_marginTop="10dp"
            android:text="@string/title_terima_kasih"/>

        <Button
            android:id="@+id/dialogDismiss_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="30dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary_color"
            android:text="@string/title_home"
            android:textAllCaps="false"
            android:textSize="16sp"
            style="@style/Widget.Material3.Button.Icon"/>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>