<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <ImageView
            android:id="@+id/tv_foodimage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/image_food"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_foodname"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:textStyle="bold"
            android:layout_marginStart="12dp"

            app:layout_constraintStart_toEndOf="@id/tv_foodimage"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tv_foodprice"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"

            android:text="@string/currency_format"
            app:layout_constraintStart_toEndOf="@id/tv_foodimage"
            app:layout_constraintTop_toBottomOf="@id/tv_foodname"
            android:layout_marginTop="8dp" />
        <ImageView
            android:id="@+id/ic_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/quantity_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/tv_decrement"
                style="@style/TextAppearance.Material3.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                android:padding="8dp"
                android:text="@string/decrement"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toStartOf="@+id/tv_quantity"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                android:padding="8dp"
                android:textStyle="bold"
                android:text="@string/tv_quantity"
                android:textSize="15sp"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toStartOf="@+id/tv_increment"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_decrement" />

            <TextView
                android:id="@+id/tv_increment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                android:padding="8dp"
                android:text="@string/tv_increment"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_quantity" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_catatan"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_foodimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_foodimage"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
