<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CartFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_cart"
        style="@style/TextAppearance.Material3.ActionBar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        android:text="@string/title_keranjang"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_food"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_cart"
        app:layout_constraintBottom_toTopOf="@id/ll_chcekout"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_cart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_cart"
            tools:listitem="@layout/item_food_cart"

            />

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_chcekout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tv_total_price"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_total_harga"
            app:layout_constraintBottom_toTopOf="@id/tv_total_value"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/tv_total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/rp_40_000"/>
        <Button
            android:id="@+id/btn_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_pesan"
            android:textColor="@color/black"
            style="@style/Widget.Material3.Button.Icon"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>