<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.confirmationorder.ConfirmationOrderActivity">
    <ProgressBar
        android:id="@+id/progresbar_order_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_confirm_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_konfirmasi_pesanan"
            style="@style/TextAppearance.Material3.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/title_konfirmasi_pesanan"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_back_arrow"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/metode_pengiriman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/header_confirm_order">

        <TextView
            android:id="@+id/tv_metode_pengiriman"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_metode_pengiriman"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        />

        <RadioGroup
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/pink_out_line"
            android:checkedButton="@+id/offer"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_metode_pengiriman">

            <RadioButton
                android:id="@+id/search"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/title_ambil_sendiri"
                android:textColor="@color/black" />

            <RadioButton

                android:id="@+id/offer"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"

                android:text="@string/title_dikirim"
                android:textColor="@color/black" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/list_order"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@id/metode_pengiriman"
        app:layout_constraintBottom_toTopOf="@id/metode_pembayaran"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewOrder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_food_cart"/>
    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/metode_pembayaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/checkout_order">

        <TextView
            android:id="@+id/tv_metode_pembayaran"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_metode_pengiriman"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <RadioGroup
            android:id="@+id/toggle_pembayaran"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/pink_out_line"
            android:checkedButton="@+id/btn_dompet_digital"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_metode_pembayaran">

            <RadioButton
                android:id="@+id/btn_tunai"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:textStyle="bold"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:text="@string/title_tunai"
                android:textColor="@color/black" />

            <RadioButton

                android:id="@+id/btn_dompet_digital"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:textStyle="bold"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:text="@string/title_dompet_digital"
                android:textColor="@color/black" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/checkout_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/tv_ringkasan_pembayaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            android:text="@string/title_ringkasan_pembayaran"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/tv_title_pembayaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_ringkasan_pembayaran"
            android:text="@string/total_pembayaran"/>
        <TextView
            android:id="@+id/tv_pembayaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_ringkasan_pembayaran"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/rp_40_000"/>
        <Button
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_pembayaran"
            android:text="@string/title_checkout_pesan"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>